# riveter-scorer

./: README.md  pyproject.toml
src/riveter_scorer/: __init__.py  helpers.py  scorer.py
tests/: test_scorer.py
tests/data/: example_stories.txt
